CSS fixes
refs #1039
fix #1052

- CSS fixes for hover effect and for anoying horizontal scroll bar

--- a/web/css/encod.css
+++ b/web/css/encod.css
@@ -2,54 +2,54 @@
 
 .tabs
 {
-	list-style-type:none;
-	margin:0;
-	padding-bottom:34px;
-	padding-left: 25px;
+  list-style-type:none;
+  margin:0;
+  padding-bottom:34px;
+  padding-left: 25px;
 }
 
 .tabs > a{
-	width: 164px;
-	padding-top: 10px;
-	text-align:center;
-	float:left;
- 	margin:2px 2px 0;
-	height: 20px;
-	cursor:pointer;
-  font-size : 9pt;	
+  width: 164px;
+  padding-top: 10px;
+  text-align:center;
+  float:left;
+  margin:2px 2px 0;
+  height: 20px;
+  cursor:pointer;
+  font-size : 9pt;
 }
 
 .tabs > a.enabled
 {
-	background-image:url(/images/encod_tab_enable.png);
-	background-repeat:no-repeat;
-	height:20px;
+  background-image:url(/images/encod_tab_enable.png);
+  background-repeat:no-repeat;
+  height:20px;
 }
 
 .tabs > a.selected
 {
-	border-bottom:1px solid white;
-	height: 21px;
+  border-bottom:1px solid white;
+  height: 21px;
 }
 
 .tabs > a.disabled
 {
-	background-image:url(/images/encod_tab_disable.png);
-	background-repeat:no-repeat;
-	color:#d3d3d1;
-	border-bottom:1px solid #c0d147;
+  background-image:url(/images/encod_tab_disable.png);
+  background-repeat:no-repeat;
+  color:#d3d3d1;
+  border-bottom:1px solid #c0d147;
 }
 
 .panel
 {
-	margin-top:-2px;
-	border:1px solid #c0d147;
-	padding-top: 30px;
-	padding-left:21px;
-	padding-right: 21px;
-	padding-bottom: 20px;
-	background-color:white;
-	min-height:  300px;
+  margin-top:-2px;
+  border:1px solid #c0d147;
+  padding-top: 30px;
+  padding-left:21px;
+  padding-right: 21px;
+  padding-bottom: 20px;
+  background-color:white;
+  min-height:  300px;
 }
 
 
@@ -65,55 +65,56 @@
 }
 
 .encod_screen .widget .widget_content {
-	background-color:#F6F6F6;
-	border:1px solid #C1CF56;
+  background-color:#F6F6F6;
+  border:1px solid #C1CF56;
+  padding-bottom:28px;
 }
 
 .form
 {
-	line-height: 20px;
+  line-height: 20px;
 }
 
 .help_ico
 {
-	vertical-align:middle;
+  vertical-align:middle;
 }
 
 #arrow_right {
-	right:30px;
+  right:30px;
 }
 
 #arrow_left {
-	left:30px;
+  left:30px;
 }
 
 #arrow_right, #arrow_left {
-	position:absolute;
-	top:200px;
-	cursor:pointer;
+  position:absolute;
+  top:200px;
+  cursor:pointer;
 }
 
 .encoding
 {
-	position:relative;
+  position:relative;
 }
 
 .scrollContainer > div.panel {
     padding: 20px;
 /*     height: 400px; */
 /*     width: 1040px; */
-	float: left;
-	position: relative;
+  float: left;
+  position: relative;
 }
 
 #slider .scroll
 {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 .error_fld
 {
-    border: 1px solid #EC9593;
+  border: 1px solid #EC9593;
 }
 
 .link_catalogue
@@ -136,8 +137,8 @@ td >.link_catalogue
 }
 #relation_catalogue_name
 {
- float:left;
- border:1px solid #C1CF56;
+  float:left;
+  border:1px solid #C1CF56;
   padding: 0.2em;
 }
 
@@ -150,7 +151,6 @@ td >.link_catalogue
 {
  font-size:x-small;
 }
-
 
 .parts_overview
 {
@@ -176,11 +176,11 @@ table.extended_info hr
 }
 #taxon_orig span
 {
-    display: block;
-    font-style: italic;
-    margin-bottom: 1em;
-    margin-top: 1em;
-    text-decoration: underline;
+  display: block;
+  font-style: italic;
+  margin-bottom: 1em;
+  margin-top: 1em;
+  text-decoration: underline;
 }
 
 .loan_form textarea {
